@@ -18,6 +18,8 @@ Current git version
     - When hiding windows, correctly set their WM_STATE to IconicState (we set
       it to Withdrawn state before, which means "unmanaged" and thus is wrong).
       This may require restarting pagers when upgrading hlwm live.
+    - Fix crash in 'split explode'
+    - 'split explode' preserves the window focus (as in v0.7.2 and before)
 
 Release 0.9.0 on 2020-10-31
 ---------------------------
